...
            <Text
              style={[
                styles.typography.h2,
                { color: styles.colors.text, textAlign: "center" },
              ]}
            >
              İlacı Sil
            </Text>

            <Text
              style={[
                styles.typography.body,
                {
...

              <TouchableOpacity
                onPress={onDelete}
                style={[localStyles.button, localStyles.deleteButton]}
              >
                <Text style={[styles.typography.body, { color: "white" }]}>
                  Sil
                </Text>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </SafeAreaView>
...
