...
            style={[
              localStyles.modalHeader,
              { borderBottomColor: styles.colors.border },
            ]}
          >
            <Text style={[styles.typography.h1, { color: styles.colors.text }]}>
              Kişisel Bilgiler
            </Text>
            <TouchableOpacity onPress={onClose}>
              <MaterialIcons
                name="close"
                color={styles.colors.text}
                size={24}
...
                localStyles.saveButton,
                { backgroundColor: styles.colors.primary },
              ]}
              onPress={handleSave}
            >
              <Text style={[styles.typography.body, { color: "white" }]}>
                Kaydet
              </Text>
            </TouchableOpacity>
          </ScrollView>
        </View>
      </SafeAreaView>
    </Modal>
...
