...
        }}
      />
      <Tab.Screen
        name="profile"
        component={require("@/screens/profile").default}
        options={{
          title: "Profil",
          tabBarIcon: ({ color, size }) => <FontAwesome name="user" size={size} color={color} />,
          headerTitle: "Profil",
          headerShown: false,
        }}
      />
    </Tab.Navigator>
...
