appId: com.mmustafa_kapici.dosemate
---
- launchApp
- tapOn: "İlaçlar"
- tapOn: "Ekle"
- inputText: "Parol"
- tapOn: "Kaydet"
- assertVisible: "Parol" 